--- a/barchart-udt-core/.gitignore
+++ b/barchart-udt-core/.gitignore
@@ -6,21 +6,28 @@
 # http://www.opensource.org/licenses/bsd-license.php
 #
 
-
 #
 # keep eclipse settings in repo
 #
-!.cproject
-!.project
-!.classpath
-!.settings/
+!/.cproject
+!/.project
+!/.classpath
+!/.settings
 
 #
-# library exctract during test
+# drop library exctract during test
 #
 /lib
 
 #
-# cdt build folders
+# drop eclipse/maven build results 
 #
 /cdt_*
+/bin
+/target
+
+#
+# drop maven release config 
+#
+/release.properties
+/pom.xml.*
