--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
 	<modules>
 		<module>barchart-udt-archon</module>
 		<module>barchart-udt-core</module>
+		<module>barchart-udt-example</module>
 		<module>barchart-udt-integration-test</module>
 	</modules>
 
