--- a/barchart-udt-bundle/pom.xml
+++ b/barchart-udt-bundle/pom.xml
@@ -16,6 +16,7 @@
 		<groupId>com.barchart.udt</groupId>
 		<artifactId>barchart-udt-archon</artifactId>
 		<version>2.0.0-SNAPSHOT</version>
+		<relativePath>../barchart-udt-archon</relativePath>
 	</parent>
 
 	<groupId>com.barchart.udt</groupId>
