--- a/barchart-udt-core/.settings/org.eclipse.cdt.core.prefs
+++ b/barchart-udt-core/.settings/org.eclipse.cdt.core.prefs
@@ -2,7 +2,7 @@ eclipse.preferences.version=1
 environment/project/cdt.managedbuild.config.gnu.cygwin.so.debug.171840419=
 environment/project/cdt.managedbuild.config.gnu.cygwin.so.debug.171840419/append=true
 environment/project/cdt.managedbuild.config.gnu.cygwin.so.debug.171840419/appendContributed=true
-indexer/filesToParseUpFront=cstdarg, cstdio, sys/resource.h, ctime, stdarg.h, stddef.h, sys/types.h
+indexer/filesToParseUpFront=cstdarg, stdarg.h, stddef.h, sys/resource.h, ctime, sys/types.h, signal.h, cstdio
 indexer/indexAllFiles=true
 indexer/indexOnOpen=false
 indexer/indexUnusedHeadersWithAlternateLang=false
