--- a/barchart-udt-core/pom.xml
+++ b/barchart-udt-core/pom.xml
@@ -1,12 +1,3 @@
-<!--
-
-    Copyright (C) 2009-2012 Barchart, Inc. <http://www.barchart.com/>
-
-    All rights reserved. Licensed under the OSI BSD License.
-
-    http://www.opensource.org/licenses/bsd-license.php
-
--->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
@@ -239,6 +230,7 @@
 			</build>
 		</profile>
 
+		<!-- integration test: a) build bundle b) load bundle on all platforms -->
 		<profile>
 			<id>int</id>
 			<build>
@@ -247,20 +239,15 @@
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-invoker-plugin</artifactId>
 						<configuration>
-							<debug>false</debug>
-							<ignoreFailures>false</ignoreFailures>
+							<streamLogs>true</streamLogs>
 							<projectsDirectory>src/int/</projectsDirectory>
-							<settingsFile>src/int/settings.xml</settingsFile>
-							<cloneProjectsTo>${project.build.directory}/int-work</cloneProjectsTo>
-							<localRepositoryPath>${project.build.directory}/int-repo</localRepositoryPath>
+							<!-- <settingsFile>src/int/settings.xml</settingsFile> -->
+							<!-- <cloneProjectsTo>${project.build.directory}/int-work</cloneProjectsTo> -->
+							<!-- <localRepositoryPath>${project.build.directory}/int-repo</localRepositoryPath> -->
 							<invokerPropertiesFile>invoker-${label}-${jdk}.properties</invokerPropertiesFile>
 							<setupIncludes>
-								<!-- <setupInclude>int-00-parent/pom.xml</setupInclude> -->
-								<!-- <setupInclude>int-01-bundle/pom.xml</setupInclude> -->
 							</setupIncludes>
 							<pomIncludes>
-								<!-- <pomInclude>int-01-bundle/pom.xml</pomInclude> -->
-								<!-- <pomInclude>int-02-bundle-test/pom.xml</pomInclude> -->
 								<pomInclude>all/pom.xml</pomInclude>
 							</pomIncludes>
 							<goals>
@@ -490,7 +477,6 @@
 				</plugins>
 			</build>
 		</profile>
-
 
 		<profile>
 			<!-- native build configuration -->
