--- a/barchart-udt-core/aol.properties
+++ b/barchart-udt-core/aol.properties
@@ -8,7 +8,9 @@
 
 ##################################################################
 #
-# note: nar internally uses:
+# AOL (Architecture-OperatingSystem-Linker) Build Values 
+#
+# note: maven-nar-plugin internally uses:
 # g++ front end for compiler phase and
 # gcc front end for linker phase of the build
 #
