--- a/barchart-udt-core/src/main/resources/nar-aol.properties
+++ b/barchart-udt-core/src/main/resources/nar-aol.properties
@@ -7,8 +7,9 @@
 #
 
 #
-# ${mavenStamp}
+# ${projectBuildStamp}
 #
+
 # AOL (Architecture-OperatingSystem-Linker) Default Values
 #
 # @author Mark Donszelmann
