--- a/barchart-udt-core/src/main/resources/version.properties
+++ b/barchart-udt-core/src/main/resources/version.properties
@@ -7,19 +7,21 @@
 #
 
 #
-# ${mavenStamp}
+# ${projectBuildStamp}
 #
-#	provides udt native and udt wrapper version information
+
+#
+# provides udt native and udt wrapper version information
 #
 
 # TODO read from Yunhong Gu source
-udt.version=4.8.0
+udt.version=4.9.0
 
-# wrapper artifact version
-barchart.name=${project.build.finalName}
-barchart.group=${project.groupId}
-barchart.artifact=${project.artifactId}
+# library artifact coordinates
+barchart.groupId=${project.groupId}
+barchart.artifactId=${project.artifactId}
 barchart.version=${project.version}
 
 # build time, milliseconds UTC
-barchart.timestamp=${barchart.timestamp}
+barchart.timestamp=${projectTimeLong}
+
