--- a/barchart-udt-core-it/pom.xml
+++ b/barchart-udt-core-it/pom.xml
@@ -63,9 +63,11 @@
 	</profiles>
 
 	<build>
+
 		<pluginManagement>
 			<plugins>
-				<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
+				<!--This plugin's configuration is used to store Eclipse m2e settings 
+					only. It has no influence on the Maven build itself. -->
 				<plugin>
 					<groupId>org.eclipse.m2e</groupId>
 					<artifactId>lifecycle-mapping</artifactId>
@@ -75,19 +77,11 @@
 							<pluginExecutions>
 								<pluginExecution>
 									<pluginExecutionFilter>
-										<groupId>
-											org.apache.maven.plugins
-										</groupId>
-										<artifactId>
-											maven-dependency-plugin
-										</artifactId>
-										<versionRange>
-											[2.5.1,)
-										</versionRange>
+										<groupId>org.apache.maven.plugins</groupId>
+										<artifactId>maven-dependency-plugin</artifactId>
+										<versionRange>[0,)</versionRange>
 										<goals>
-											<goal>
-												unpack-dependencies
-											</goal>
+											<goal>unpack-dependencies</goal>
 											<goal>unpack</goal>
 										</goals>
 									</pluginExecutionFilter>
@@ -101,5 +95,7 @@
 				</plugin>
 			</plugins>
 		</pluginManagement>
+
 	</build>
+
 </project>
