--- a/barchart-udt-archon/pom.xml
+++ b/barchart-udt-archon/pom.xml
@@ -37,7 +37,7 @@
 
 		<projectBuildStamp><![CDATA[build stamp: ${project.artifactId} ${project.version} ${projectTimeISO}]]></projectBuildStamp>
 
-		<!-- os/arch library classifier keys -->
+		<!-- os/arch jni library classifier keys -->
 
 		<lin32>i386-Linux-gpp-jni</lin32>
 		<lin64>amd64-Linux-gpp-jni</lin64>
@@ -46,7 +46,7 @@
 		<win32>x86-Windows-gpp-jni</win32>
 		<win64>amd64-Windows-gpp-jni</win64>
 
-		<!-- latest nar plugin -->
+		<!-- latest maven-nar-plugin -->
 
 		<!-- <narPluginGroupId>org.apache.maven.plugins</narPluginGroupId> -->
 		<!-- <narPluginArtifactId>maven-nar-plugin</narPluginArtifactId> -->
