--- a/barchart-udt-core/.project
+++ b/barchart-udt-core/.project
@@ -45,7 +45,12 @@
 				</dictionary>
 				<dictionary>
 					<key>org.eclipse.cdt.make.core.buildLocation</key>
-					<value>${workspace_loc:/sourceforge-udt-wrapper/build-linux-x86-64}</value>
+					<value>${workspace_loc:/${ProjName}/cdt_amd64-Linux-gpp}</value>
+					<value>${workspace_loc:/${ProjName}/cdt_amd64-Windows-gpp}</value>
+					<value>${workspace_loc:/${ProjName}/cdt_i386-Linux-gpp}</value>
+					<value>${workspace_loc:/${ProjName}/cdt_i386-MacOSX-gpp}</value>
+					<value>${workspace_loc:/${ProjName}/cdt_x86_64-MacOSX-gpp}</value>
+					<value>${workspace_loc:/${ProjName}/cdt_x86-Windows-gpp}</value>
 				</dictionary>
 				<dictionary>
 					<key>org.eclipse.cdt.make.core.cleanBuildTarget</key>
