--- a/barchart-udt-bundle/pom.xml
+++ b/barchart-udt-bundle/pom.xml
@@ -40,11 +40,11 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-release-plugin</artifactId>
 				<configuration>
-					<!--"arguments" are overwritten by overriding profiles -->
 					<arguments>
+						--update-snapshots \
 						--define skipTests \
 						--activate-profiles \
-						release-properties,release-versions,package-bundle
+						release-versions,package-bundle
 					</arguments>
 				</configuration>
 			</plugin>
